prevent horizontal scroll

--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body {
     font-weight: 400;
     font-size: 1.125rem;
     line-height: 1.6rem;
+    overflow-x: hidden;
 }
 
 h1 {
